[package]
name = "rbdc-pg-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rbdc-pg]
path = ".."

[dependencies.rbs]
path = "../../rbs"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
